# DigitalNetIndex

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac
data/: README  README.txt
example/: file_format.txt
sample/: nxlw_s4_m10.txt
sqlite3/: .gitignore  Makefile.am  alter.sql  create_digitalnet2.sql  create_id.sql  create_sobolbase.sql  delete.sql  hex.c  insert_digitalnet.cpp  insert_digitalnet_binary.cpp  insert_sobolbase.cpp  memo.txt  nb64.cpp  nb64.h  nx2dnform.cpp  rebuild.sh  select-all-m-b.sql  select-all-m.sql  select-all.sql  select-summary.sql  select.sh  select.sql  select_digitalnet.cpp  select_digitalnet_binary.cpp  select_sobolbase.cpp
src/: .gitignore  DigitalNet.cpp  DigitalNet.h  DigitalNet.hpp  Makefile  Makefile.am  Makefile.in  Makefile.mpi  Makefile.private  add_index.cpp  binary.h  bit_operator.h  calc_tvalue.hpp  calc_wafom.hpp  calc_wafom_lookup.cpp  calc_wafom_lookup.hpp  combination.hpp  compute.cpp  compute.h  config.h  config.h.in  cvmean.cpp  cvmean.h  diff_wafom.hpp  digitalnet_index.cpp  gray.hpp  grayindex.hpp  interlaced_sobolpoint.cpp  kahan.hpp  linear_scramble.hpp  matrix_rank.hpp  powtwo.h  search_lownx_mpi.cpp  search_lowwafom.cpp  search_lowwafom_mpi.cpp  search_lowwafom_mpi_list.cpp  sobolpoint.cpp  sobolpoint.h  test_calc_cvmean.cpp  test_calc_tvalue.cpp  (+7 more)
