noinst_bindir =
noinst_bin_PROGRAMS = insert_digitalnet select_digitalnet nx2dnform

insert_digitalnet_SOURCES = insert_digitalnet.cpp
select_digitalnet_SOURCES = select_digitalnet.cpp
nx2dnform_SOURCES = nx2dnform.cpp

AM_CXXFLAGS = -O3 -Wall -Wextra -D__STDC_CONSTANT_MACROS

EXTRA_DIST = create_digitalnet.sql
